docs: add documentation for showOpening
